--- a/src/googleapis/codegen/languages/php/default/templates/_method.tmpl
+++ b/src/googleapis/codegen/languages/php/default/templates/_method.tmpl
@@ -15,7 +15,7 @@
  * @opt_param {{ param.codeType }} {{ param.wireName }}
  * {{ param.description }}{% endfilter %}{% endfor %}
 {% endif %}
-{% if method.response %}
+{% if method.response and method.responseType.className %}
  * @return {{ method.responseType.className }}{% if method.responseType.className|lower == resource.className|lower or method.requestType.className in api.resourceNames %}Model{% endif %}
 {% endif %}
  */
@@ -32,7 +32,7 @@ public function {{ method.name }}({% call_template _func_params method=method %}
     {% endif %}
   {% end_parameter_list %}];
   $params = array_merge($params, $optParams);
-{% if method.response %}
+{% if method.response and method.responseType.className %}
   return $this->{% if baseMethod == 1 %}base_methods->{% endif %}call('{{ method.wireName }}', [$params], {{ method.responseType.className }}{% if method.responseType.className|lower == resource.className|lower or method.responseType.className in api.resourceNames %}Model{% endif %}::class);
 {% else %}
   return $this->{% if baseMethod == 1 %}base_methods->{% endif %}call('{{ method.wireName }}', [$params]);
