--- a/src/googleapis/codegen/languages/php/default/templates/___api_className___/Resource/___resources_className___.php.tmpl
+++ b/src/googleapis/codegen/languages/php/default/templates/___api_className___/Resource/___resources_className___.php.tmpl
@@ -10,7 +10,7 @@ namespace {{ api.ownerName }}\Service\{{ api.className }}\Resource;
  * Typical usage is:
  *  <code>
  *   ${{ api.name }}Service = new {{ api.ownerName }}\Service\{{ api.className }}(...);
- *   ${{ resource.codeName }} = ${{ api.name }}Service->{{ resource.codeName }};
+ *   ${{ resource.codeName }} = ${{ api.name }}Service->{{ resource.phpPropName }};
  *  </code>
  */
 class {{ resource.className }} extends \Google\Service\Resource
