--- a/src/googleapis/codegen/languages/php/default/templates/___api_className___/___models_className___.php.tmpl
+++ b/src/googleapis/codegen/languages/php/default/templates/___api_className___/___models_className___.php.tmpl
@@ -31,8 +31,8 @@ class {{ model.className }} extends {% if model.superClass %}{{ model.superClass
    * @var {{ property.annotationType }}{% if property.dataType == "array" or property.dataType == "map" %}[]{% endif %}
    */
  {% endif %}
+  public ${{ property.memberName }};
  {% endif %}
-  public ${{ property.memberName }}{% if property.dataType == "array" or property.dataType == "map" %} = []{% endif %};
 {% endfor %}
 {% endfilter %}
 {% filter noblanklines %}
